fix bug #14351 (#702)
* The two tooltip messages were overlapped and the Automation button isn't grey when use view user to check policy #14351


* save


* Update CreationView.test.js.snap


* npm


* more unit test cases

--- a/src-web/scss/grc-toggle-module.scss
+++ b/src-web/scss/grc-toggle-module.scss
@@ -21,6 +21,13 @@
   }
 }
 
+#disabledAutomationButton {
+  cursor: not-allowed;
+  .textWithTruncation {
+    color: black
+  }
+}
+
 .pf-c-button.pf-m-link.automationButton {
   padding: 0px;
   font-size: 14px;
